# drone-simulation

./: .gitignore  LICENSE  README.md  requirements.txt
gazebo_models/drone_description/: model.config
gazebo_models/drone_description/meshes/: arm_4.dae  brace_4.dae  drone.dae
src/drone_bringup/: CMakeLists.txt  package.xml  setup.py
src/drone_bringup/drone_bringup/: dummy_imu_publisher.py  dummy_joint_state_publisher.py  init_joint_positions.py  mechanism_gui.py  pid_control_node.py  slider_control_service.py  toggle_mechanism_service.py
src/drone_bringup/launch/: control_and_spawn.launch.py  manual_spawn.launch.py  rviz_view.launch.py
src/drone_bringup/rviz/: drone_view.rviz
src/drone_description/: CMakeLists.txt  package.xml  setup.py
src/drone_description/meshes/: arm_1.dae  arm_2.dae  arm_3.dae  base.dae  brace_1.dae  brace_2.dae  brace_3.dae  column.dae  slider.dae
src/drone_description/urdf/: drone_system.urdf.xacro  macros.urdf.xacro
src/joint_effort_plugin/: CMakeLists.txt  package.xml
src/joint_effort_plugin/src/: JointEffortPlugin.cpp
src/thrust_plugin/: CMakeLists.txt  package.xml
src/thrust_plugin/src/: ThrustPlugin.cpp
