<?xml version="1.0"?>
<package format="3">
  <name>drone_bringup</name>
  <version>0.1.0</version>
  <description>ROS2 bringup and control package for a drone-mounted mechanism</description>

  <maintainer email="mateuszzawila01@egmail.com">Mateusz Zawila</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
