<?xml version="1.0"?>
<package format="3">
  <name>drone_description</name>
  <version>0.1.0</version>
  <description>URDF, Xacro, and mesh files for the drone mechanism with umbrella-style capture system</description>

  <maintainer email="mateuszzawila01@egmail.com">Mateusz Zawila</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
