<?xml version="1.0"?>
<package format="3">
  <name>joint_effort_plugin</name>
  <version>0.0.1</version>
  <description>Plugin for applying effort to joints via ROS2 topics</description>

  <maintainer email="mateuszzawila01@gmail.com">Mateusz Zawila</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>gazebo</exec_depend>

</package>
