<?xml version="1.0"?>
<package format="3">
  <name>thrust_plugin</name>
  <version>0.0.1</version>
  <description>Custom thrust plugin for Gazebo</description>

  <maintainer email="mateuszzawila01@gmail.com">Mateusz Zawila</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
